# video-streaming-test

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/: index.html  mse.js  script.js  style.css
client/jmuxer/: index.html  script.js
client/mjpeg/: index.html  script.js
server/: main.cpp
server/include/encoding/: CMakeLists.txt  encoder.cpp
server/include/network/: CMakeLists.txt
server/include/network/websocket/: WebSocketProtocol.cpp  WebSocketServer.cpp
server/include/video/: encoder.cpp
